--- a/config_as_code/satellite/centos7_c2r/content_views.yml
+++ b/config_as_code/satellite/centos7_c2r/content_views.yml
@@ -32,4 +32,17 @@ satellite_content_views:
       product: 'Community Enterprise OS 7'
     - name: CentOS-7 - Updates RPMs x86_64
       product: 'Community Enterprise OS 7'
+
+  - name: CentOS7_to_RHEL7
+    description: "CentOS7 to RHEL7 conversion composite content view"
+    auto_publish: false
+    components:
+      - content_view: CentOS7
+        latest: true
+      - content_view: RHEL7
+        latest: true
+    lifecycle_environments:
+      - "CentOS7_to_RHEL7_Dev"
+      - "CentOS7_to_RHEL7_QA"
+      - "CentOS7_to_RHEL7_Prod"
 ...
