Ensure content_view variable is present, along with name variable.

--- a/config_as_code/satellite/centos7_c2r/content_views.yml
+++ b/config_as_code/satellite/centos7_c2r/content_views.yml
@@ -2,6 +2,7 @@
 satellite_content_views:
   # Red Hat Enterprise Linux 7
   - name: RHEL7
+    content_view: RHEL7
     lifecycle_environments:
       - "RHEL7_Dev"
       - "RHEL7_QA"
@@ -17,6 +18,7 @@ satellite_content_views:
         product: 'Red Hat Enterprise Linux Server'
   # Community Enterprise Linux 7
   - name: CentOS7
+    content_view: CentOS7
     lifecycle_environments:
       - "CentOS7_Dev"
       - "CentOS7_QA"
@@ -30,6 +32,7 @@ satellite_content_views:
         product: 'Community Enterprise OS 7'
 
   - name: CentOS7_to_RHEL7
+    content_view: CentOS7_to_RHEL7
     description: "CentOS7 to RHEL7 conversion composite content view"
     auto_publish: false
     components:
