--- a/config_as_code/satellite/centos7_c2r/repositories.yml
+++ b/config_as_code/satellite/centos7_c2r/repositories.yml
@@ -1,3 +1,9 @@
 ---
-satellite_products: []
+satellite_products:
+  - name: Convert2RHEL 7
+    repositories:
+      - name: Convert2RHEL 7 x86_64
+        content_type: yum
+        url: https://cdn.redhat.com/content/public/convert2rhel/7/x86_64/os/
+        gpg_key: RPM-GPG-KEY-redhat-release
 ...
