Include Convert2RHEL product/repo in CentOS7 CV

--- a/config_as_code/satellite/centos7_c2r/content_views.yml
+++ b/config_as_code/satellite/centos7_c2r/content_views.yml
@@ -28,6 +28,8 @@ satellite_content_views:
         product: 'Community Enterprise OS 7'
       - name: CentOS-7 - Updates RPMs x86_64
         product: 'Community Enterprise OS 7'
+      - name: Convert2RHEL 7 x86_64
+        product: 'Convert2RHEL 7'
   # CentOS7 to RHEL7 CCV
   - name: CentOS7_to_RHEL7
     description: "CentOS7 to RHEL7 conversion composite content view"
