--- a/config_as_code/satellite/centos7_c2r/repositories.yml
+++ b/config_as_code/satellite/centos7_c2r/repositories.yml
@@ -5,6 +5,6 @@ satellite_products:
       - name: Convert2RHEL 7 x86_64
         content_type: yum
         url: https://cdn.redhat.com/content/public/convert2rhel/7/x86_64/os/
-        verify_ssl_on_sync: false
         gpg_key: RPM-GPG-KEY-redhat-release
+        ssl_ca_cert: redhat-uep-cert
 ...
