Switch to content_facet_attributes only.

--- a/query_satellite_resource_info_hosts_display_content_details.yml
+++ b/query_satellite_resource_info_hosts_display_content_details.yml
@@ -28,5 +28,6 @@
       ansible.builtin.debug:
         msg:
           - "{{ hosts_resource_info_result.resources | selectattr('name', 'search', 'node*') | map(attribute='name') }}"
-          - "{{ hosts_resource_info_result.resources | selectattr('name', 'search', 'node*') | map(attribute='content_facet_attributes.content_view_environments[0].content_view.name') }}"
+          #- "{{ hosts_resource_info_result.resources | selectattr('name', 'search', 'node*') | map(attribute='content_facet_attributes.content_view_environments[0].content_view.name') }}"
+          - "{{ hosts_resource_info_result.resources | selectattr('name', 'search', 'node*') | map(attribute='content_facet_attributes') }}"
 ...
