Switch to loop for debug output.

--- a/query_satellite_resource_info_hosts_display_content_details.yml
+++ b/query_satellite_resource_info_hosts_display_content_details.yml
@@ -24,10 +24,18 @@
         resource_info_results:
           hosts: "{{ hosts_resource_info_result }}"
 
-    - name: List host name
+    #- name: List host name
+    #  ansible.builtin.debug:
+    #    msg:
+    #      - "{{ hosts_resource_info_result.resources | selectattr('name', 'search', 'node*') | map(attribute='name') }}"
+    #      #- "{{ hosts_resource_info_result.resources | selectattr('name', 'search', 'node*') | map(attribute='content_facet_attributes.content_view_environments[0].content_view.name') }}"
+    #     - "{{ hosts_resource_info_result.resources | selectattr('name', 'search', 'node*') | map(attribute='content_facet_attributes') }}"
+
+    - name: List host name plus content details
       ansible.builtin.debug:
         msg:
-          - "{{ hosts_resource_info_result.resources | selectattr('name', 'search', 'node*') | map(attribute='name') }}"
-          #- "{{ hosts_resource_info_result.resources | selectattr('name', 'search', 'node*') | map(attribute='content_facet_attributes.content_view_environments[0].content_view.name') }}"
-          - "{{ hosts_resource_info_result.resources | selectattr('name', 'search', 'node*') | map(attribute='content_facet_attributes') }}"
+          - "{{ hosts_resource_info_result.resources | selectattr('name', 'search', hosts_resource_node_name.name ) | map(attribute='content_facet_attributes') }}"
+      with_items: "{{ hosts_resource_info_result.resources | selectattr('name', 'search', 'node*') | map(attribute='name') | default([]) }}"
+      loop_control:
+        loop_var: hosts_resource_node_name
 ...
