--- a/group_vars/control/job_templates.yml
+++ b/group_vars/control/job_templates.yml
@@ -1231,6 +1231,32 @@ controller_templates:
     notification_templates_success: Telemetry
     notification_templates_error: Telemetry
 
+  - name: SATELLITE / Query hosts and display content details 
+    project: Automated Management
+    playbook: query_satellite_resource_info_hosts_display_content_details.yml
+    inventory: EC2 Dynamic Inventory
+    credentials:
+      - Satellite Credential
+      - Workshop Credential
+    extra_vars:
+      org_id: Default_Organization
+    notification_templates_started: Telemetry
+    notification_templates_success: Telemetry
+    notification_templates_error: Telemetry
+    survey_enabled: true
+    survey:
+      name: ''
+      description: ''
+      spec:
+        - question_name: Select inventory group
+          question_description: Use to limit job to selected inventory host group.
+          type: multiplechoice
+          default: ''
+          variable: dynamic_inventory_group
+          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '.*') | map(attribute='name') | list }}"
+          required: true
+    ask_limit_on_launch: true
+
   - name: Demo Job Template
     state: absent
 ...
