Update job template to utilize satellite_organization var from satellite host_vars.

--- a/group_vars/control/job_templates.yml
+++ b/group_vars/control/job_templates.yml
@@ -1239,7 +1239,7 @@ controller_templates:
       - Satellite Credential
       - Workshop Credential
     extra_vars:
-      org_id: Default_Organization
+      org_name: "{{ hostvars['satellite.example.com']['satellite_organization'] }}"
     notification_templates_started: Telemetry
     notification_templates_success: Telemetry
     notification_templates_error: Telemetry
