--- a/query_satellite_resource_info_hosts_display_content_details.yml
+++ b/query_satellite_resource_info_hosts_display_content_details.yml
@@ -40,10 +40,13 @@
       ansible.builtin.debug:
         msg:
           - "node name: {{ item }}"
-          - "content view: {{ hosts_resource_info_result.resources | selectattr('name', 'search', item) | map(attribute='content_facet_attributes.content_view.name') | first }}" 
-          - "lifecycle environment: {{ hosts_resource_info_result.resources | selectattr('name', 'search', item) | map(attribute='content_facet_attributes.lifecycle_environment.name') | first }}"
-          - "associated activation key: {{ activation_keys_resource_info_result.resources | selectattr('name', 'search', hosts_resource_info_result.resources | selectattr('name', 'search', item) \
-            | map(attribute='content_facet_attributes.lifecycle_environment.name') | first) | map(attribute='name') | first }}"
+          - "content view: {{ hosts_resource_info_result.resources | selectattr('name', 'search', item) \
+            | map(attribute='content_facet_attributes.content_view.name') | first }}"
+          - "lifecycle environment: {{ hosts_resource_info_result.resources | selectattr('name', 'search', item) \
+            | map(attribute='content_facet_attributes.lifecycle_environment.name') | first }}"
+          - "associated activation key: {{ activation_keys_resource_info_result.resources | selectattr('name', 'search', hosts_resource_info_result.resources \
+            | selectattr('name', 'search', item) | map(attribute='content_facet_attributes.lifecycle_environment.name') | first) | map(attribute='name') \
+            | first }}"
       loop: "{{ groups[dynamic_inventory_group] }}"
       when: item in hosts_resource_info_result.resources | selectattr('name', 'search', 'node*') | map(attribute='name')
 ...
