Initial basic re-code for handling ansible_limit and dynamic_inventory_group.

--- a/query_satellite_resource_info_hosts_display_content_details.yml
+++ b/query_satellite_resource_info_hosts_display_content_details.yml
@@ -15,19 +15,9 @@
       ansible.builtin.debug:
         msg: "dynamic_inventory_group list: {{ groups[dynamic_inventory_group] }}"
 
-    - name: Display value of 'ansible_limit' if set
-      ansible.builtin.debug:
-        var: ansible_limit | default ('')
-
-    - name: Set content host loop list when ansible_limit is utilized
-      when: ansible_limit in groups[dynamic_inventory_group]
+    - name: Set content host loop list
       ansible.builtin.set_fact:
-        content_host_loop_list: "{{ ansible_limit }}"
-
-    - name: Set content host loop list when ansible_limit is not utilized
-      when: ansible_limit == ''
-      ansible.builtin.set_fact:
-        content_host_loop_list: "{{ groups[dynamic_inventory_group] }}"
+        content_host_loop_list: "{{ ansible_limit if ansible_limit is defined and ansible_limit is subset(groups[dynamic_inventory_group]) else groups[dynamic_inventory_group] }}"
 
     - name: Retrieve Satellite organizations details
       redhat.satellite.resource_info:
